--- a/dataset_RAG/rag.ipynb
+++ b/dataset_RAG/rag.ipynb
@@ -40,16 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "\n",
+    "import getpass\n",
     "load_dotenv()\n",
-    "\n",
     "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
+    "\n",
+    "if GEMINI_API_KEY is None:\n",
+    "    import key \n",
+    "    GEMINI_API_KEY = key.GEMINI_API_KEY\n",
+    "else: getpass.getpass(\"GEMINI_API_KEY required\")\n",
     "\n",
     "\n",
     "\n",
@@ -57,7 +61,7 @@
     "if OPENAI_API_KEY is None:\n",
     "    import key \n",
     "    OPENAI_API_KEY = key.OPENAI_API_KEY\n",
-    "else: ValueError(\"OPENAI_API not loaded\")\n",
+    "else: getpass.getpass(\"OPENAI_API_KEY required\")\n",
     "\n",
     "# This\n",
     "# \n",
