commit and push changes

--- a/dataset_RAG/openai_rag_dataset.ipynb
+++ b/dataset_RAG/openai_rag_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,12 +22,12 @@
     "# !pip install -qU langchain-mongodb\n",
     "# !pip install beautifulsoup4\n",
     "# !pip install pyarrow fastparquet\n",
-    "!pip install ace_tools"
+    "# !pip install ace_tools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
    "source": [
     "import pandas as pd\n",
     "import re\n",
-    "import ace_tools as tools\n",
+    "# import ace_tools as tools\n",
     "from langchain_core.documents import Document\n",
     "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
     "from langchain_core.vectorstores import InMemoryVectorStore\n",
