updated and renamed

--- a/dataset_RAG/openai_rag_dataset.ipynb
+++ b/dataset_RAG/openai_rag_dataset.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,9 @@
     "import json\n",
     "from pydantic.v1 import BaseModel\n",
     "from langchain.chat_models import init_chat_model\n",
-    "from sklearn.metrics import accuracy_score"
+    "from sklearn.metrics import r2_score\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "from math import sqrt"
    ]
   },
   {
@@ -361,21 +363,20 @@
       "---------\n",
       "---------\n",
       "---------\n",
+      "---------\n",
+      "---------\n",
       "---------\n"
      ]
     },
     {
-     "ename": "JSONDecodeError",
-     "evalue": "Invalid control character at: line 2 column 253 (char 406)",
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'float' and 'str'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[48], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m---------\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;66;03m# add row as list of dictionaries   \u001b[39;00m\n\u001b[1;32m---> 16\u001b[0m result_json \u001b[38;5;241m=\u001b[39m \u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mresult\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgraded_response\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m \n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# show accuracy of the model by comparing the predicted score to the actual score\u001b[39;00m\n\u001b[0;32m     19\u001b[0m new_row \u001b[38;5;241m=\u001b[39m (row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m'\u001b[39m],row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124messay\u001b[39m\u001b[38;5;124m'\u001b[39m],\u001b[38;5;28mfloat\u001b[39m(row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOverall Band Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]),result_json[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverall score\u001b[39m\u001b[38;5;124m\"\u001b[39m],\u001b[38;5;28mfloat\u001b[39m(row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOverall Band Score\u001b[39m\u001b[38;5;124m\"\u001b[39m])\u001b[38;5;241m/\u001b[39mresult_json[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverall score\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "File \u001b[1;32mc:\\Users\\hayde\\OneDrive - Logical Aspect\\Python\\Python3.12\\Lib\\json\\__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[1;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[0;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[0;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[1;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
-      "File \u001b[1;32mc:\\Users\\hayde\\OneDrive - Logical Aspect\\Python\\Python3.12\\Lib\\json\\decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[1;34m(self, s, _w)\u001b[0m\n\u001b[0;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[0;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[0;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[0;32m    335\u001b[0m \n\u001b[0;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[0;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
-      "File \u001b[1;32mc:\\Users\\hayde\\OneDrive - Logical Aspect\\Python\\Python3.12\\Lib\\json\\decoder.py:353\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[1;34m(self, s, idx)\u001b[0m\n\u001b[0;32m    344\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Decode a JSON document from ``s`` (a ``str`` beginning with\u001b[39;00m\n\u001b[0;32m    345\u001b[0m \u001b[38;5;124;03ma JSON document) and return a 2-tuple of the Python\u001b[39;00m\n\u001b[0;32m    346\u001b[0m \u001b[38;5;124;03mrepresentation and the index in ``s`` where the document ended.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    350\u001b[0m \n\u001b[0;32m    351\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    352\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m--> 353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_once\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m    355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n",
-      "\u001b[1;31mJSONDecodeError\u001b[0m: Invalid control character at: line 2 column 253 (char 406)"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[54], line 19\u001b[0m\n\u001b[0;32m     16\u001b[0m result_json \u001b[38;5;241m=\u001b[39m json\u001b[38;5;241m.\u001b[39mloads(result[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mgraded_response\u001b[39m\u001b[38;5;124m\"\u001b[39m]) \n\u001b[0;32m     17\u001b[0m \u001b[38;5;66;03m# show accuracy of the model by comparing the predicted score to the actual score\u001b[39;00m\n\u001b[1;32m---> 19\u001b[0m new_row \u001b[38;5;241m=\u001b[39m (row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mquestion\u001b[39m\u001b[38;5;124m'\u001b[39m],row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124messay\u001b[39m\u001b[38;5;124m'\u001b[39m],\u001b[38;5;28mfloat\u001b[39m(row[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOverall Band Score\u001b[39m\u001b[38;5;124m\"\u001b[39m]),result_json[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moverall score\u001b[39m\u001b[38;5;124m\"\u001b[39m],\u001b[38;5;28;43mfloat\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mOverall Band Score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[43mresult_json\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43moverall score\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     20\u001b[0m rag_results\u001b[38;5;241m.\u001b[39mappend(new_row)  \n\u001b[0;32m     21\u001b[0m processed_rows \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'float' and 'str'"
      ]
     }
    ],
@@ -385,7 +386,7 @@
     "rag_results = []\n",
     "processed_rows = 0\n",
     "for _, row in df_test.iterrows():\n",
-    "    if processed_rows >= 100:\n",
+    "    if processed_rows >= 50:\n",
     "        break\n",
     "    result = graph.invoke({\"question\": row['question'], \"essay\": row['essay']})\n",
     "    # add the results to the rag_results dataframe\n",
@@ -407,173 +408,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>question</th>\n",
-       "      <th>essay</th>\n",
-       "      <th>Overall Band Score</th>\n",
-       "      <th>Predicted Band Score</th>\n",
-       "      <th>variation</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Interv...</td>\n",
-       "      <td>To agr...</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>It is ...</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.941176</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>It is ...</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.062500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>The pr...</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>0.454545</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>In rec...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>0.533333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>The na...</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>0.933333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>t is m...</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.250000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>There ...</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>0.733333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>The in...</td>\n",
-       "      <td>In the...</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>0.823529</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Childr...</td>\n",
-       "      <td>Educat...</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.928571</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Childr...</td>\n",
-       "      <td>It is ...</td>\n",
-       "      <td>5.5</td>\n",
-       "      <td>7.5</td>\n",
-       "      <td>0.733333</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Childr...</td>\n",
-       "      <td>Concen...</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>0.615385</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Childr...</td>\n",
-       "      <td>Educat...</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.750000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Some e...</td>\n",
-       "      <td>Nowada...</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>0.642857</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     question      essay  Overall Band Score  Predicted Band Score  variation\n",
-       "0   Interv...  To agr...        6.5                 6.5              1.000000\n",
-       "1   The in...  It is ...        8.0                 8.5              0.941176\n",
-       "2   The in...  It is ...        8.5                 8.0              1.062500\n",
-       "3   The in...  The pr...        2.5                 5.5              0.454545\n",
-       "4   The in...  In rec...        4.0                 7.5              0.533333\n",
-       "5   The in...  The na...        7.0                 7.5              0.933333\n",
-       "6   The in...  t is m...        6.5                 2.0              3.250000\n",
-       "7   The in...  There ...        5.5                 7.5              0.733333\n",
-       "8   The in...  In the...        7.0                 8.5              0.823529\n",
-       "9   Childr...  Educat...        6.5                 7.0              0.928571\n",
-       "10  Childr...  It is ...        5.5                 7.5              0.733333\n",
-       "11  Childr...  Concen...        4.0                 6.5              0.615385\n",
-       "12  Childr...  Educat...        6.0                 8.0              0.750000\n",
-       "13  Some e...  Nowada...        4.5                 7.0              0.642857"
+       "(16, 5)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,32 +426,41 @@
     "# convert list of dictionaries to dataframe\n",
     "rag_results = pd.DataFrame(rag_results, columns = ['question','essay','Overall Band Score','Predicted Band Score','variation'])\n",
     "\n",
-    "rag_results"
+    "rag_results.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.2240567824200377\n",
-      "0.9572784183603511\n"
+      "rms\n",
+      "2.3351927115336757\n",
+      "r2Square\n",
+      "-1.2969971205265325\n"
      ]
     }
    ],
    "source": [
     "# create accuracy score for continuos variables with sklearn\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from math import sqrt\n",
+    "\n",
     "\n",
     "rms = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
+    "print(\"rms\")\n",
     "print(rms)\n",
-    "print(rag_results['variation'].mean())\n",
-    "\n"
+    "print(\"r2Square\")\n",
+    "y_pred = rag_results['Predicted Band Score']\n",
+    "y_true = rag_results['Overall Band Score']\n",
+    "openai_r2_score = r2_score(y_true, y_pred)\n",
+    "print(openai_r2_score)\n",
+    "\n",
+    "\n",
+    "# save to excel file\n",
+    "rag_results.to_excel(\"openai_rag_results.xlsx\")\n"
    ]
   }
  ],
