updated with performance measures

--- a/dataset_RAG/openai_rag_dataset.ipynb
+++ b/dataset_RAG/openai_rag_dataset.ipynb
@@ -399,7 +399,7 @@
     "    result_json = json.loads(result[\"graded_response\"]) \n",
     "    # show accuracy of the model by comparing the predicted score to the actual score\n",
     "    \n",
-    "    new_row = (row['question'],row['essay'],float(row[\"Overall Band Score\"]),result_json[\"overall score\"],float(row[\"Overall Band Score\"])/result_json[\"overall score\"])\n",
+    "    new_row = (row['question'],row['essay'],(row[\"Overall Band Score\"]),result_json[\"overall score\"],float(row[\"Overall Band Score\"])/result_json[\"overall score\"])\n",
     "    rag_results.append(new_row)  \n",
     "    processed_rows += 1\n",
     "\n",
@@ -431,33 +431,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rms\n",
+      "openai_performance_measures\n",
+      "mse\n",
       "2.3351927115336757\n",
-      "r2Square\n",
-      "-1.2969971205265325\n"
+      "rmse\n",
+      "2.3351927115336757\n",
+      "mae\n",
+      "5.453125\n"
      ]
     }
    ],
    "source": [
-    "# create accuracy score for continuos variables with sklearn\n",
+    "# create measures of accuraacy for coninuous data\n",
     "\n",
+    "# Mean Squared Error\n",
+    "# Root Mean Squared Error\n",
+    "# Mean Absolute Error\n",
     "\n",
-    "rms = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
-    "print(\"rms\")\n",
-    "print(rms)\n",
-    "print(\"r2Square\")\n",
     "y_pred = rag_results['Predicted Band Score']\n",
     "y_true = rag_results['Overall Band Score']\n",
-    "openai_r2_score = r2_score(y_true, y_pred)\n",
-    "print(openai_r2_score)\n",
     "\n",
+    "print(\"openai_performance_measures\")\n",
+    "\n",
+    "\n",
+    "print(\"mse\")\n",
+    "mse = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
+    "print(mse)\n",
+    "\n",
+    "print(\"rmse\")\n",
+    "rmse = sqrt(mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score']))\n",
+    "print(rmse)\n",
+    "\n",
+    "print(\"mae\")\n",
+    "mae = mean_squared_error(rag_results['Overall Band Score'], rag_results['Predicted Band Score'])    \n",
+    "print(mae)\n",
     "\n",
     "# save to excel file\n",
     "rag_results.to_excel(\"openai_rag_results.xlsx\")\n"
